--- a/workers-client/src/app/modules/components/all-employee/all-employee.component.html
+++ b/workers-client/src/app/modules/components/all-employee/all-employee.component.html
@@ -1,12 +1,16 @@
-<h2>employee list</h2>
 
 <div class="text-center">
-    <br>
+  <br>
+  <mat-form-field class="example-form-field">
+    <mat-label>Search</mat-label>
+    <input matInput type="text"  [(ngModel)]="searchText" (input)="applyFilter()">
+  </mat-form-field>
+
+  <br>
     <button (click)="addEmployeeToList()" class="btn btn-success">Add Course</button>
 </div>
 
-
-<div class="container">
+<!-- <div class="container">
     <div class="row">
       <div class="col-md-6 mx-auto">
         <ul class="list-group">
@@ -16,5 +20,55 @@
         </ul>
       </div>
     </div>
-</div>
+</div> --> 
+
+<br>
+<div class="mat-elevation-z8" >
+  <table mat-table [dataSource]="dataSource" >
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.idNumber}} </td>
+    </ng-container>
+
+   
+    <ng-container matColumnDef="firstname">
+      <th mat-header-cell *matHeaderCellDef>First Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="lastname">
+      <th mat-header-cell *matHeaderCellDef>Last Name </th>
+      <td mat-cell *matCellDef="let element">{{element.lastName}}</td>
+    </ng-container>
+
   
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Date Starting Work </th>
+      <td mat-cell *matCellDef="let element"> {{element.dateSartingWork | date: 'dd/MM/yyyy' }} </td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="editEmployee()" mat-raised-button style="margin-right: 30px;">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button (click)="deleteEmployee(element.id)" mat-raised-button>
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
+</div>
+
