--- a/workers-client/src/app/modules/components/employee-details/employee-details.component.html
+++ b/workers-client/src/app/modules/components/employee-details/employee-details.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Employee Details</h5>
@@ -11,4 +11,37 @@
       </div>
     </div>
   </div>
+   -->
+
+
   
+   <!-- <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource"> -->
+  
+      <!-- Position Column -->
+      <!-- <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let element"> {{ employee.idNumber}} </td>
+      </ng-container> -->
+  
+      <!-- Name Column -->
+      <!-- <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <td mat-cell *matCellDef="let element"> {{ employee.firstName}} {{employee.lastName}} </td>
+      </ng-container> -->
+  
+      <!-- Symbol Column -->
+      <!-- <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> date </th>
+        <td mat-cell *matCellDef="let element"> {{ employee.dateSartingWork | date: 'dd/MM/yyyy' }} </td>
+      </ng-container>
+    </table> -->
+      <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                   showFirstLastButtons
+                   aria-label="Select page of periodic elements">
+    </mat-paginator> -->
+  <!-- </div> -->
