--- a/workers-client/src/app/modules/components/all-employee/all-employee.component.html
+++ b/workers-client/src/app/modules/components/all-employee/all-employee.component.html
@@ -54,7 +54,7 @@
         <button mat-icon-button (click)="editEmployee()" mat-raised-button style="margin-right: 30px;">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="deleteEmployee(element.id)" mat-raised-button>
+        <button mat-icon-button (click)="deleteEmployee(element)" mat-raised-button>
           <mat-icon>delete</mat-icon>
         </button>
       </td>
