--- a/workers-client/src/app/modules/components/add-employee/add-employee.component.html
+++ b/workers-client/src/app/modules/components/add-employee/add-employee.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container">
+<div class="container">
     <div class="row">
       <div class="col-md-6 offset-md-3">
         <h2>Add New Employee</h2>
@@ -13,7 +13,8 @@
           </div>
           <div class="mb-3">
             <label for="idNumber" class="form-label">ID Number</label>
-            <input type="text" class="form-control" id="idNumber" [(ngModel)]="employee.idNumber" name="idNumber">
+            <input type="text" class="form-control" id="idNumber" [(ngModel)]="employee.idNumber" name="idNumber"  required (input)="validateId()">
+            <div *ngIf="idInvalid" class="error-message">Identity must contain exactly 9 digits</div>
           </div>
           <div class="mb-3">
             <label for="dateStartingWork" class="form-label">Starting Work Date</label>
@@ -23,51 +24,47 @@
             <label for="dateOfBirth" class="form-label">Date of Birth</label>
             <input type="date" class="form-control" id="dateOfBirth" [(ngModel)]="employee.dateOfBirth" name="dateOfBirth">
           </div>
-          <div class="mb-3">
+
+
+          <!-- <div class="mb-3">
             <label for="gender" class="form-label">Gender</label>
             <select class="form-select" id="gender" [(ngModel)]="employee.gender" name="gender">
               <option value="male">Male</option>
               <option value="female">Female</option>
             </select>
-          </div>
+          </div> -->
 
 
-
-
-          <div class="mb-3">
-            <label for="roles" class="form-label">Roles</label>
-            <div *ngFor="let role of employee.roles">
-              <div class="form-group">
-                <label for="roleName{{role.id}}" class="form-label">Role Name</label>
-                <select class="form-select" id="roleName{{role.id}}" [(ngModel)]="role.name" name="roleName{{role.id}}">
-                  <option value="Secretary">Secretary</option>
-                  <option value="Programmer">Programmer</option>
-                  <option value="Doctor">Doctor</option>
-                  <option value="Kindergartner">Kindergartner</option>
-                  <option value="Salesperson">Salesperson</option>
-                  <option value="Accountant">Accountant</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="isAdministrative{{role.id}}" class="form-label">Is Administrative</label>
-                <input type="checkbox" class="form-check-input" id="isAdministrative{{role.id}}" [(ngModel)]="role.isAdministrative" name="isAdministrative{{role.id}}">
-              </div>
-              <div class="form-group">
-                <label for="startDate{{role.id}}" class="form-label">Start Date</label>
-                <input type="date" class="form-control" id="startDate{{role.id}}" [(ngModel)]="role.startDate" name="startDate{{role.id}}">
-              </div>
+          <div class="detail">
+            <button (click)="toggleVaccinationDetails()" class="btn btn-primary">Add Roles</button>
+         </div>
+            <div class="d-flex"   *ngIf="showVaccinationDetails" class="add-roles">
+              <div>
+                <label for="roleId" class="form-label">EmployeeId</label>
+                <input type="text" class="form-control" id="roleEmployeeId" name="roleEmployeeId" [(ngModel)]="role.employeeId">
+             </div>
+                <div>
+                    <label for="roleName" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="roleName" name="roleName" [(ngModel)]="role.name">
+                </div>
+                <div>
+                  <br>
+                    <input type="checkbox" class="form-check-input" id="roleAdministrative" name="roleAdministrative" [(ngModel)]="role.isAdministrative">
+                    <label for="roleIsAdmin" class="form-label">  Is Administrative</label>
+                </div>
+                <div>
+                    <label for="roleStartDate" class="form-label">Start Date</label>
+                    <input type="date" class="form-control" id="roleStartDate" name="roleStartDate" [(ngModel)]="role.startDate">
+                </div>
+                <button type="button" class="btn btn-secondary" (click)="addRole()">Add</button>
             </div>
-          </div>
-          
+           
+       
 
-
-
-
-
-          
+          <br>
           <button type="submit" class="btn btn-primary" (click)="addEmployee()">Submit</button>
         </form>
       </div>
     </div>
   </div>
-   -->
+  
