--- a/workers-client/src/app/app.component.html
+++ b/workers-client/src/app/app.component.html
@@ -1,23 +1,3 @@
 
-    <mat-toolbar>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" routerLink="/allEmployee">
-        <mat-icon>menu</mat-icon>
-      </button>
-
-      <span>Employee List</span>
-      <span class="example-spacer"></span>
-
-      <button mat-icon-button (click)="exportToExcel()">
-        <mat-icon>file_download</mat-icon>
-      </button>
-
-      <button mat-icon-button >
-        <mat-icon>favorite</mat-icon>
-      </button>
-
-      <button mat-icon-button >
-        <mat-icon>share</mat-icon>
-      </button>
-
-    </mat-toolbar>
+    <app-navbar></app-navbar>
  <router-outlet ></router-outlet > 
