--- a/workers-client/src/app/modules/components/add-employee/add-employee.component.html
+++ b/workers-client/src/app/modules/components/add-employee/add-employee.component.html
@@ -35,34 +35,15 @@
           </div> -->
 
 
-          <div class="detail">
-            <button (click)="toggleVaccinationDetails()" class="btn btn-primary">Add Roles</button>
-         </div>
-            <div class="d-flex"   *ngIf="showVaccinationDetails" class="add-roles">
-              <div>
-                <label for="roleId" class="form-label">EmployeeId</label>
-                <input type="text" class="form-control" id="roleEmployeeId" name="roleEmployeeId" [(ngModel)]="role.employeeId">
-             </div>
-                <div>
-                    <label for="roleName" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="roleName" name="roleName" [(ngModel)]="role.name">
-                </div>
-                <div>
-                  <br>
-                    <input type="checkbox" class="form-check-input" id="roleAdministrative" name="roleAdministrative" [(ngModel)]="role.isAdministrative">
-                    <label for="roleIsAdmin" class="form-label">  Is Administrative</label>
-                </div>
-                <div>
-                    <label for="roleStartDate" class="form-label">Start Date</label>
-                    <input type="date" class="form-control" id="roleStartDate" name="roleStartDate" [(ngModel)]="role.startDate">
-                </div>
-                <button type="button" class="btn btn-secondary" (click)="addRole()">Add</button>
-            </div>
-           
+       
        
 
           <br>
-          <button type="submit" class="btn btn-primary" (click)="addEmployee()">Submit</button>
+          <button type="submit" class="btn btn-primary" (click)="addEmployee()">Add</button>
+          <span style="margin: 0 100px;"></span> 
+          <button type="submit" class="btn btn-primary" (click)="cancelaAddEmployee()">Cancel</button>
+          <span style="margin: 0 100px;"></span>
+          <button type="submit" class="btn btn-primary" (click)="addRoles()">Add roles</button>          
         </form>
       </div>
     </div>
