--- a/workers-client/src/app/modules/components/add-employee/add-employee.component.html
+++ b/workers-client/src/app/modules/components/add-employee/add-employee.component.html
@@ -26,13 +26,13 @@
           </div>
 
 
-          <!-- <div class="mb-3">
+          <div class="mb-3">
             <label for="gender" class="form-label">Gender</label>
             <select class="form-select" id="gender" [(ngModel)]="employee.gender" name="gender">
               <option value="male">Male</option>
               <option value="female">Female</option>
             </select>
-          </div> -->
+          </div>
 
 
        
