--- a/workers-client/src/app/modules/components/add-employee/add-employee.component.html
+++ b/workers-client/src/app/modules/components/add-employee/add-employee.component.html
@@ -43,7 +43,7 @@
           <span style="margin: 0 100px;"></span> 
           <button type="submit" class="btn btn-primary" (click)="cancelaAddEmployee()">Cancel</button>
           <span style="margin: 0 100px;"></span>
-          <button type="submit" class="btn btn-primary" (click)="addRoles()">Add roles</button>          
+          <button type="submit" class="btn btn-primary" (click)="addRoles(employee)">Add roles</button>          
         </form>
       </div>
     </div>
