--- a/workers-client/src/app/modules/components/edit-employee/edit-employee.component.html
+++ b/workers-client/src/app/modules/components/edit-employee/edit-employee.component.html
@@ -1,59 +1,6 @@
 
-    <!-- <div class="container">
-        <div class="row">
-          <div class="col-md-6 offset-md-3">
-            <h2>Edit Employee</h2>
-            <form>
-              <div class="mb-3">
-                <label for="firstName" class="form-label">First Name</label>
-                <input type="text" class="form-control" id="firstName" [(ngModel)]="employee.firstName" name="firstName">
-              </div>
-              <div class="mb-3">
-                <label for="lastName" class="form-label">Last Name</label>
-                <input type="text" class="form-control" id="lastName" [(ngModel)]="employee.lastName" name="lastName">
-              </div>
-              <div class="mb-3">
-                <label for="idNumber" class="form-label">ID Number</label>
-                <input type="text" class="form-control" id="idNumber" [(ngModel)]="employee.idNumber" name="idNumber"  required (input)="validateId()">
-                <div *ngIf="idInvalid" class="error-message">Identity must contain exactly 9 digits</div>
-              </div>
-              <div class="mb-3">
-                <label for="dateStartingWork" class="form-label">Starting Work Date</label>
-                <input type="date" class="form-control" id="dateSartingWork" [(ngModel)]="employee.dateSartingWork" name="dateSartingWork">
-              </div>
-              <div class="mb-3">
-                <label for="dateOfBirth" class="form-label">Date of Birth</label>
-                <input type="date" class="form-control" id="dateOfBirth" [(ngModel)]="employee.dateOfBirth" name="dateOfBirth">
-              </div> -->
-    
-    
-              <!-- <div class="mb-3">
-                <label for="gender" class="form-label">Gender</label>
-                <select class="form-select" id="gender" [(ngModel)]="employee.gender" name="gender">
-                  <option value="male">Male</option>
-                  <option value="female">Female</option>
-                </select>
-              </div> -->
-    
-    
-           
-           
-    
-              <!-- <br>
-              <button type="submit" class="btn btn-primary" (click)="editEmployee()">Save</button> 
-            </form>
-          </div>
-        </div>
-      </div>
-      
-
-      <app-roles-by-employee [employee]="employee"></app-roles-by-employee> -->
-
-
-
-
-      <div class="container">
-        <div class="row">
+  <div class="container">
+    <div class="row">
           <!-- Roles by Employee Section -->
           <div class="col-md-6">
             <div class="roles-by-employee-section">
@@ -88,8 +35,6 @@
                   <label for="dateOfBirth" class="form-label">Date of Birth</label>
                   <input type="date" class="form-control" id="dateOfBirth" [(ngModel)]="employee.dateOfBirth" name="dateOfBirth">
                 </div> 
-      
-      
                 <div class="mb-3">
                   <label for="gender" class="form-label">Gender</label>
                   <select class="form-select" id="gender" [(ngModel)]="employee.gender" name="gender">
@@ -97,16 +42,16 @@
                     <option value="female">Female</option>
                   </select>
                 </div>
-      
-      
-             
-             
-      
-                <br>
-                <button type="submit" class="btn btn-primary" (click)="editEmployee()">Save</button> 
               </form>
             </div>
           </div>
+
+
+          <div class="text-center">
+            <br>
+            <button type="submit" class="btn btn-primary custom-btn" (click)="editEmployee()">Save</button>
         </div>
-      </div> 
+
+    </div>
+  </div> 
       
