--- a/workers-client/src/app/modules/components/navbar/navbar.component.html
+++ b/workers-client/src/app/modules/components/navbar/navbar.component.html
@@ -14,6 +14,10 @@
       <mat-icon>file_download</mat-icon>
     </button>
 
+    <button mat-icon-button (click)="handleEmailClick()">
+      <mat-icon>email</mat-icon>
+    </button>
+
     <button mat-icon-button >
       <mat-icon>favorite</mat-icon>
     </button>
