--- a/workers-client/src/app/modules/components/add-employee/add-employee.component.html
+++ b/workers-client/src/app/modules/components/add-employee/add-employee.component.html
@@ -1,51 +1,52 @@
-<div class="container">
-    <div class="row">
-      <div class="col-md-6 offset-md-3">
-        <h2>Add New Employee</h2>
-        <form>
+
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <h2 class="text-center">Add New Employee</h2>
+        <form [formGroup]="employeeForm">
           <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="firstName" [(ngModel)]="employee.firstName" name="firstName">
+            <input type="text" class="form-control" id="firstName" formControlName="firstName">
           </div>
           <div class="mb-3">
             <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName" [(ngModel)]="employee.lastName" name="lastName">
+            <input type="text" class="form-control" id="lastName" formControlName="lastName">
           </div>
           <div class="mb-3">
             <label for="idNumber" class="form-label">ID Number</label>
-            <input type="text" class="form-control" id="idNumber" [(ngModel)]="employee.idNumber" name="idNumber"  required (input)="validateId()">
-            <div *ngIf="idInvalid" class="error-message">Identity must contain exactly 9 digits</div>
+            <input type="text" class="form-control" id="idNumber" formControlName="idNumber">          
           </div>
           <div class="mb-3">
             <label for="dateStartingWork" class="form-label">Starting Work Date</label>
-            <input type="date" class="form-control" id="dateSartingWork" [(ngModel)]="employee.dateSartingWork" name="dateSartingWork">
+            <input type="date" class="form-control" id="dateSartingWork" formControlName="dateSartingWork">
           </div>
           <div class="mb-3">
             <label for="dateOfBirth" class="form-label">Date of Birth</label>
-            <input type="date" class="form-control" id="dateOfBirth" [(ngModel)]="employee.dateOfBirth" name="dateOfBirth">
+            <input type="date" class="form-control" id="dateOfBirth" formControlName="dateOfBirth">
           </div>
-
-
           <div class="mb-3">
             <label for="gender" class="form-label">Gender</label>
-            <select class="form-select" id="gender" [(ngModel)]="employee.gender" name="gender">
+            <select class="form-select" id="gender" formControlName="gender">
               <option value="male">Male</option>
               <option value="female">Female</option>
             </select>
           </div>
-
-
-       
-       
-
-          <br>
-          <button type="submit" class="btn btn-primary" (click)="addEmployee()">Add</button>
-          <span style="margin: 0 100px;"></span> 
-          <button type="submit" class="btn btn-primary" (click)="cancelaAddEmployee()">Cancel</button>
-          <span style="margin: 0 100px;"></span>
-          <button type="submit" class="btn btn-primary" (click)="addRoles(employee)">Add roles</button>          
+          <div class="text-center">
+            <button type="submit" class="btn btn-primary" (click)="addEmployee()">
+              <i class="bi bi-person-plus-fill"></i> Add Employee
+            </button>
+            <span style="margin: 0 20px;"></span> 
+            <button type="button" class="btn btn-danger" (click)="cancelAddEmployee()">
+              <i class="bi bi-x-lg"></i> Cancel
+            </button>
+            <span style="margin: 0 20px;"></span>
+            <button type="button" class="btn btn-success" (click)="addRoles()">
+              <i class="bi bi-people-fill"></i> Add Roles
+            </button>
+          </div>                  
         </form>
       </div>
     </div>
   </div>
   
+ 
