--- a/workers-client/src/app/modules/components/roles-by-employee/roles-by-employee.component.html
+++ b/workers-client/src/app/modules/components/roles-by-employee/roles-by-employee.component.html
@@ -1,12 +1,11 @@
 
     <div class="demo-button-container">
-        <button mat-icon-button (click)="openDialog()" >
+        <button mat-icon-button (click)="openDialog(role,true)" >
           <mat-icon>add</mat-icon>   
         </button>
       </div>
-      
-      
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+         
+      <table mat-table  [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
        
         <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef>No.</th>
@@ -34,7 +33,7 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-              <button mat-icon-button  mat-raised-button >
+              <button mat-icon-button  mat-raised-button (click)="openDialog(element,false)" >
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-icon-button  mat-raised-button (click)="deleteRole(element.id)">
