--- a/workers-client/src/app/modules/components/roles-by-employee/roles-by-employee.component.html
+++ b/workers-client/src/app/modules/components/roles-by-employee/roles-by-employee.component.html
@@ -19,13 +19,13 @@
         </ng-container>
       
       
-        <ng-container matColumnDef="weight">
+        <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef>Entry date</th>
           <td mat-cell *matCellDef="let element">{{element.startDate | date: 'dd/MM/yyyy'}}</td>
         </ng-container>
       
       
-        <ng-container matColumnDef="symbol">
+        <ng-container matColumnDef="IsAdministrative">
           <th mat-header-cell *matHeaderCellDef>IsAdministrative</th>
           <td mat-cell *matCellDef="let element">{{element.isAdministrative}}</td>
         </ng-container>
