--- a/workers-client/src/app/app.component.html
+++ b/workers-client/src/app/app.component.html
@@ -1,3 +1,5 @@
 
-    <app-navbar></app-navbar>
- <router-outlet ></router-outlet > 
+<app-navbar></app-navbar>
+<div class="content-below-navbar">
+    <router-outlet></router-outlet>
+</div>
