--- a/workers-client/src/app/modules/components/navbar/navbar.component.css
+++ b/workers-client/src/app/modules/components/navbar/navbar.component.css
@@ -2,4 +2,12 @@
     flex: 1 1 auto;
   }
 
+  .mat-toolbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; 
+  }
   
+ 
