--- a/workers-client/src/app/modules/components/edit-employee/edit-employee.component.html
+++ b/workers-client/src/app/modules/components/edit-employee/edit-employee.component.html
@@ -36,8 +36,8 @@
           <div class="mb-3">
             <label for="gender" class="form-label">Gender</label>
             <select class="form-select" id="gender" formControlName="gender">
-              <option value="male" >Male</option>
-              <option value="female" >Female</option>
+              <option value="0">Male</option>
+              <option value="1">Female</option>
             </select>
           </div>
 
