--- a/workers-client/src/app/modules/components/roles-by-employee/roles-by-employee.component.html
+++ b/workers-client/src/app/modules/components/roles-by-employee/roles-by-employee.component.html
@@ -14,7 +14,7 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{getNameByNumber(element.name)}}</td>
+    <td mat-cell *matCellDef="let element">{{getNameByNumber(element.name+1)}}</td>
   </ng-container>
 
 
