--- a/workers-client/src/app/modules/components/add-employee/add-employee.component.html
+++ b/workers-client/src/app/modules/components/add-employee/add-employee.component.html
@@ -5,23 +5,50 @@
       <form [formGroup]="employeeForm">
         <div class="mb-3">
           <label for="firstName" class="form-label">First Name</label>
-          <input type="text" class="form-control" id="firstName" formControlName="firstName">
+          <input
+            type="text"
+            class="form-control"
+            id="firstName"
+            formControlName="firstName"
+          />
         </div>
         <div class="mb-3">
           <label for="lastName" class="form-label">Last Name</label>
-          <input type="text" class="form-control" id="lastName" formControlName="lastName">
+          <input
+            type="text"
+            class="form-control"
+            id="lastName"
+            formControlName="lastName"
+          />
         </div>
         <div class="mb-3">
           <label for="idNumber" class="form-label">ID Number</label>
-          <input type="text" class="form-control" id="idNumber" formControlName="idNumber">
+          <input
+            type="text"
+            class="form-control"
+            id="idNumber"
+            formControlName="idNumber"
+          />
         </div>
         <div class="mb-3">
-          <label for="dateStartingWork" class="form-label">Starting Work Date</label>
-          <input type="date" class="form-control" id="dateSartingWork" formControlName="dateSartingWork">
+          <label for="dateStartingWork" class="form-label"
+            >Starting Work Date</label
+          >
+          <input
+            type="date"
+            class="form-control"
+            id="dateSartingWork"
+            formControlName="dateSartingWork"
+          />
         </div>
         <div class="mb-3">
           <label for="dateOfBirth" class="form-label">Date of Birth</label>
-          <input type="date" class="form-control" id="dateOfBirth" formControlName="dateOfBirth">
+          <input
+            type="date"
+            class="form-control"
+            id="dateOfBirth"
+            formControlName="dateOfBirth"
+          />
         </div>
         <div class="mb-3">
           <label for="gender" class="form-label">Gender</label>
@@ -34,11 +61,15 @@
           <button type="submit" class="btn btn-primary" (click)="addEmployee()">
             <i class="bi bi-person-plus-fill"></i> Add Employee
           </button>
-          <span style="margin: 0 20px;"></span>
-          <button type="button" class="btn btn-danger" (click)="cancelAddEmployee()">
+          <span style="margin: 0 20px"></span>
+          <button
+            type="button"
+            class="btn btn-danger"
+            (click)="cancelAddEmployee()"
+          >
             <i class="bi bi-x-lg"></i> Cancel
           </button>
-          <span style="margin: 0 20px;"></span>
+          <span style="margin: 0 20px"></span>
           <button type="button" class="btn btn-success" (click)="addRoles()">
             <i class="bi bi-people-fill"></i> Add Roles
           </button>
