--- a/workers-client/src/app/modules/components/add-role/add-role.component.html
+++ b/workers-client/src/app/modules/components/add-role/add-role.component.html
@@ -4,13 +4,20 @@
   <div mat-dialog-content [formGroup]="roleForm">
     <div class="mb-3">
       <label for="startDate" class="form-label">Date entry</label>
-      <input type="date" class="form-control" id="dateOfBirth" formControlName="startDate">
+      <input
+        type="date"
+        class="form-control"
+        id="dateOfBirth"
+        formControlName="startDate"
+      />
     </div>
 
     <div class="mb-3">
       <label for="name" class="form-label">Title</label>
       <select class="form-select" formControlName="name">
-        <option *ngFor="let title of titles" [value]="title">{{title}}</option>
+        <option *ngFor="let title of titles" [value]="title">
+          {{ title }}
+        </option>
       </select>
     </div>
 
@@ -18,17 +25,27 @@
       <div class="form-group">
         <label for="isManagement" class="form-label">Is Management</label>
         <select class="form-select" formControlName="isAdministrative">
-          <option [value]=true>True</option>
-          <option [value]=false>False</option>
+          <option [value]="true">True</option>
+          <option [value]="false">False</option>
         </select>
       </div>
     </div>
   </div>
 
   <div mat-dialog-actions>
-    <button mat-button [mat-dialog-close]="true" class="btn btn-primary">Cancel</button>
-    <span style="margin: 0 10px;"></span>
-    <button mat-button [mat-dialog-close]="snackBarOpen" cdkFocusInitial (click)="addRole()" class="btn btn-primary"
-      [disabled]="roleForm.invalid">Save</button>
+    <button mat-button [mat-dialog-close]="true" class="btn btn-primary">
+      Cancel
+    </button>
+    <span style="margin: 0 10px"></span>
+    <button
+      mat-button
+      [mat-dialog-close]="snackBarOpen"
+      cdkFocusInitial
+      (click)="addRole()"
+      class="btn btn-primary"
+      [disabled]="roleForm.invalid"
+    >
+      Save
+    </button>
   </div>
 </div>
