--- a/workers-client/src/app/modules/components/login/login.component.css
+++ b/workers-client/src/app/modules/components/login/login.component.css
@@ -1,24 +1,21 @@
 mat-card {
-    max-width: 400px;
-    margin: 2em auto;
-    text-align: center;
-    background-color:  #e0e2e3;
-  }
-  
-  mat-form-field {
-    display: block;
-   
-  }
-  .background-container {
-     background-image: url('/assets/Instruction for correct pose during office work.jpg'); 
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* Center the content vertically */
-    align-items: center; /* Center the content horizontally */
-  
-  }
-  
+  max-width: 400px;
+  margin: 2em auto;
+  text-align: center;
+  background-color: #e0e2e3;
+}
+
+mat-form-field {
+  display: block;
+}
+.background-container {
+  background-image: url("/assets/Instruction for correct pose during office work.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;
+}
