--- a/workers-client/src/app/modules/components/logout/logout.component.html
+++ b/workers-client/src/app/modules/components/logout/logout.component.html
@@ -1,5 +1,4 @@
 <div class="logout-container">
-    <img src="/assets/5844.jpg" alt="logout_image">
-    <p>You have securely logged out from your account</p>
-  </div>
-  
+  <img src="/assets/5844.jpg" alt="logout_image" />
+  <p>You have securely logged out from your account</p>
+</div>
