--- a/workers-client/src/app/modules/components/login/login.component.html
+++ b/workers-client/src/app/modules/components/login/login.component.html
@@ -7,7 +7,7 @@
         <mat-form-field>
           <input
             matInput
-            placeholder="username"
+            placeholder="Username"
             [(ngModel)]="username"
             name="username"
             required
